deployables in cloudflare [skip ci]
